--- a/styles/styles.css
+++ b/styles/styles.css
@@ -4,25 +4,17 @@
     background-size: cover;
     background-position: center;
     color: #fff;
-    padding: 20px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
 
 
 }
 
-.messages-section h1 {
-    text-align: center;
-    margin-bottom: 20px;
-}
 
 .message {
     background-color: rgba(26, 24, 24, 0.8);
-    padding: 15px;
-    margin-bottom: 15px;
+    width: fit-content;
     border-radius: 8px;
     overflow: hidden;
-}
-
-.message p {
-    margin: 0;
-    text-align: center;
 }
