--- a/styles/cards.css
+++ b/styles/cards.css
@@ -23,3 +23,42 @@
         height: 50%;
     }
 }
+
+
+
+
+
+
+
+
+
+
+.dept{
+    float: right;
+}
+
+
+
+
+.bn40 {
+    border-radius: 4px;
+    font-weight: 600;
+    font-size: large;
+    padding: 4px 6px;
+    color: #fff !important;
+  }
+  
+  .bn40::after {
+    max-width: 100%;
+    height: 2px;
+    display: block;
+    content: "";
+    background: linear-gradient(-90deg, #ff9100 0%, #f10366 50%, #6173ff 100%);
+    opacity: 1;
+    margin-bottom: -6px;
+    margin-top: 1px;
+  }
+  
+  .bn40div {
+    display: flex;
+  }
