--- a/styles/cards.css
+++ b/styles/cards.css
@@ -1,7 +1,7 @@
-.card {
+.cardparent {
     width: 100%;
     border-radius: 10px;
-    box-shadow: 0 0 10px rgba(0, 0, 0, 0.2);
+    
     display: flex;
     position: relative;
     cursor: pointer;
@@ -10,8 +10,9 @@
 .info {
     width: 50%;
     height: 100%;
-    
+
     display: flex;
+    flex-direction: column;
     justify-content: center;
     align-items: center;
 
@@ -21,20 +22,27 @@
 .charimg {
     width: 50%;
     height: 100%;
-    
+
     display: flex;
     justify-content: center;
     align-items: center;
 }
-.image{
-    padding: 10px;
-    border-radius: 10px;
-    background-color: rgba(255, 255, 255, 0.504);
+
+.image {
+    
+    
+    box-shadow: rgba(0, 115, 255, 0.925) 0px 20px 50px -25px;
     margin: 10px;
+}
+.image img{
+    width: 100%;
+    height: 100%;
+    border-radius: 10px;
+
 }
 
 @media (max-width: 768px) {
-    .card {
+    .cardparent {
         flex-direction: column;
     }
 
@@ -46,27 +54,168 @@
 }
 
 
-.infocard {
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+.parent {
+    height: 400px;
     width: 300px;
-    text-align: center;
-    border: 1px solid #ccc;
     padding: 20px;
-    border-radius: 8px;
-    box-shadow: 0 0 10px rgba(220, 198, 198, 0.1);
-    animation: txtright 1s  linear;/*only test animation*/
-    background-color: rgba(255, 255, 255, 0.65);
+
+}
+
+.card {
+    padding-top: 100px;
+    transform-style: preserve-3d;
+    background-image: url("https://images.pexels.com/photos/1629236/pexels-photo-1629236.jpeg?auto=compress&cs=tinysrgb&w=1260&h=750&dpr=1");
+    background-position: center center;
+    width: 100%;
+    transition: all 0.5s ease-in-out;
+    border-radius: 10px;
+}
+
+.card:hover {
+    
+    transform: rotate3d(0.5, 1, 0, 30deg);
+}
+
+.content-box {
+    height: 100%;
+    width: 100%;
+    background-color: rgba(0, 0, 0, 0.811);
+    border-radius: 0px 0px 10px 10px;
+    box-shadow: rgba(0, 115, 255, 0.925) 0px 20px 50px -25px;
+    transition: all 0.5s ease-in-out;
+    padding: 50px 25px 25px 25px;
+    transform-style: preserve-3d;
+}
+
+.content-box .card-title {
+    color: white;
+    font-size: 25px;
+    font-weight: 900;
+    transition: all 0.5s ease-in-out;
+    transform: translate3d(0px, 0px, 20px);
+}
+
+.content-box .card-title:hover {
+    transform: translate3d(0px, 0px, 50px);
+}
+
+.content-box .card-content {
+    padding-top: 15px;
+    font-size: 12px;
+    color: #b9b9b9;
+    transition: all 0.5s ease-in-out;
+    transform: translate3d(0px, 0px, 20px);
+}
+
+.content-box .card-content:hover {
+    transform: translate3d(0px, 0px, 50px);
+}
+
+.content-box .dept {
+    display: block;
+    font-weight: 900;
+    font-size: 11px;
+    text-transform: uppercase;
+    color: #0088ff;
+    padding-top: 15px;
+    transition: all 0.5s ease-in-out;
+    transform: translate3d(0px, 0px, 20px);
+}
+
+.content-box .see-more:hover {
+    transform: translate3d(0px, 0px, 50px);
+}
+
+.img-box {
+    position: absolute;
+    top: 75px;
+    left: 25px;
+    height: 60px;
+    width: 60px;
+    background-color: black;/*replace by bg image*/
+    border-radius: 10px;
+    padding: 10px;
+    box-shadow: #0066ff 0px 20px 60px 0px, #00c8ff 0px 18px 36px -18px;
+    transform: translate3d(0px, 0px, 50px);
+}
+
+.card1 {
+    filter: hue-rotate(0deg);/*change the value to change the color*/
+}
+.card2 {
+    filter: hue-rotate(150deg);
+}
+
+.card3 {
+    filter: hue-rotate(300deg);
+}
+
+.card4 {
+    filter: hue-rotate(90deg);
 }
 
 
 
 
+/*animation on infobox odd*/
+.aniodd.trig{
+    animation: comeinodd 1.5s normal forwards ease-in-out; 
+}
+@keyframes comeinodd { 
+  0% { 
+    transform: translate(-100%);
+  } 
+  100% { 
+    transform: translate(0%);
+  } 
+}
 
 
-@keyframes txtright {
-    to {
-      transform: translateX(0%);
+/*animation on infobox even*/
+.anieven.trig{
+    animation: comeineven 1.5s normal forwards ease-in-out; 
+}
+@keyframes comeineven { 
+  0% { 
+    transform: translate(100%);
+  } 
+  100% { 
+    transform: translate(0%);
+  } 
+}
+/*animation on image card*/
+.ani2.trig{
+    animation: bounce 1.5s normal forwards ease-in-out; 
+}
+@keyframes bounce { 
+ 0%{
+    opacity: 0;
+    transform: translateY(0);
+ }
+ 40%{
+    transform: translateY(-30px);
     }
-    from {
-      transform: translateX(-100%);
+    60%{
+        transform: translateY(-10px);
     }
-  }
+
+    100% { 
+        opacity: 1;
+        transform: translateY(0);
+    }
+}
