--- a/global.css
+++ b/global.css
@@ -32,6 +32,8 @@ body::-webkit-scrollbar-thumb{
     background-color: var(--color-text);
     border-radius: 15px;
 }
+
+/*footer svg*/
 footer{
     background: var(--color-secondary2);
     
@@ -49,5 +51,41 @@ footer{
     height: 152px;
 }
 .custom-shape-divider-bottom-1704973730 .shape-fill {
+    fill: var(--color-secondary2);
+}
+/*messages top svg*/
+.custom-shape-divider-bottom-1704987047 {
+ 
+    width: 100%;
+    overflow: hidden;
+    line-height: 0;
+}
+
+.custom-shape-divider-bottom-1704987047 svg {
+    position: relative;
+    display: block;
+    width: calc(100% + 1.3px);
+    height: 181px;
+}
+
+.custom-shape-divider-bottom-1704987047 .shape-fill {
+    fill: var(--color-secondary2);
+}
+/*msg bottom svg*/
+.custom-shape-divider-top-1704987424 {
+  
+    width: 100%;
+    overflow: hidden;
+    line-height: 0;
+}
+
+.custom-shape-divider-top-1704987424 svg {
+    position: relative;
+    display: block;
+    width: calc(100% + 1.3px);
+    height: 181px;
+}
+
+.custom-shape-divider-top-1704987424 .shape-fill {
     fill: var(--color-secondary2);
 }
