--- a/styles/cards.css
+++ b/styles/cards.css
@@ -29,7 +29,7 @@
 }
 
 .image {
-    
+    overflow: hidden;
     
     box-shadow: rgba(0, 115, 255, 0.925) 0px 20px 50px -25px;
     margin: 10px;
@@ -56,6 +56,7 @@
     height: 400px;
     width: 300px;
     padding: 20px;
+    overflow: hidden;/* fix it later just a temp sol*/
 }
 .card {
     padding-top: 100px;
