--- a/global.css
+++ b/global.css
@@ -19,9 +19,9 @@ body{
     font-family: 'Poppins', sans-serif;
 }
 nav{
-    position: fixed;
+   /* position: fixed;
     top: 0;
-    left: 0;
+    left: 0;*/
     width: 100%;
     background: none;
 }
