--- a/styles/cards.css
+++ b/styles/cards.css
@@ -23,6 +23,7 @@
     display: flex;
     justify-content: center;
     align-items: center;
+    overflow: hidden;
 }
 .image {
     overflow: hidden;    
