--- a/styles/navbar.css
+++ b/styles/navbar.css
@@ -1,28 +1,23 @@
-.navbar {
-    
+
+.nav{
+    background-color: #000000;
+    color: #ffffff;
     padding: 10px;
     display: flex;
-    justify-content: space-between;
+    justify-content: space-around;
     align-items: center;
+    position: sticky;
+    top: 0;
+    z-index: 10;
+    
 }
-
-.logo img {
-    width: 40px; /* Adjust logo size as needed */
-    height: auto;
-    margin-right: 10px;
+.navbar{
+    z-index: 10;
+    display: flex;
 }
-
-.logo span {
-    color: #FFC2C7;
-    font-weight: bold;
-}
-
 
 /* Responsive Styles */
 @media screen and (max-width: 768px) {
-    .navbar {
-        flex-direction: column;
-        align-items: flex-start;
-    }
+  
 
 }
