--- a/styles/cards.css
+++ b/styles/cards.css
@@ -34,6 +34,7 @@
     width: 100%;
     height: 100%;
     border-radius: 10px;
+    overflow: hidden;
 }
 @media (max-width: 768px) {
     .cardparent {
