--- a/styles/navbar.css
+++ b/styles/navbar.css
@@ -1,23 +1,94 @@
 
-.nav{
-    background-color: #000000;
-    color: #ffffff;
-    padding: 10px;
-    display: flex;
-    justify-content: space-around;
-    align-items: center;
-    position: sticky;
-    top: 0;
-    z-index: 10;
-    
-}
-.navbar{
-    z-index: 10;
-    display: flex;
-}
-
-/* Responsive Styles */
-@media screen and (max-width: 768px) {
   
+  .navbar {
+    position: fixed;
+    top: 0;
+    background-color: var(--bg-color);
+    color: var(--text-color);
+    overflow: hidden;
+    padding: 10px;
+    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
+    z-index: 10000;
+  }
+  
+  .navbar-logo {
+    float: left;
+    width: 40px;
+    height: 40px;
+    margin-right: 20px;
+    
+  }
 
-}
+  
+  .navbar-links {
+    list-style: none;
+    margin: 0;
+    padding: 0;
+    float: right;
+  }
+  
+  .navbar-links li {
+    display: inline-block;
+    margin-right: 20px;
+  }
+  
+  .navbar-links a {
+    text-decoration: none;
+    color: var(--text-color);
+    font-weight: bold;
+  }
+  
+  .navbar-toggle {
+    display: none;
+    font-size: 1.5em;
+    cursor: pointer;
+  }
+  
+  @media screen and (max-width: 600px) {
+    .navbar-links {
+      display: none;
+      width: 100%;
+      text-align: center;
+      position: fixed;
+      top: 60px;
+      background-color: var(--bg-color);
+      box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
+    }
+  
+    .navbar-links.show {
+      display: block;
+    }
+  
+    .navbar-links li {
+      display: block;
+      margin: 0;
+      padding: 10px;
+    }
+  
+    .navbar-toggle {
+      display: block;
+      float: right;
+      width: 40px;
+      height: 40px;
+      background-size: cover;
+      background-position: center;
+      
+    }
+    .tog .cross{
+        width: 100%;
+        height: 100%;
+    }
+    .tog{
+        display: block;
+    }
+    .tog.show{
+        display: none;
+    }
+    .cross{
+        display: none;
+    }
+    .cross.show{
+        display: block;
+    }
+  }
+  
