--- a/styles/main.css
+++ b/styles/main.css
@@ -63,7 +63,7 @@
     transition: opacity 500ms;
     visibility: hidden;
     opacity: 0;
-    z-index: 1000;
+    z-index: 10000000;
 }
 
 .overlay:target {
