--- a/global.css
+++ b/global.css
@@ -34,4 +34,5 @@ body::-webkit-scrollbar{
 body::-webkit-scrollbar-thumb{
     background-color: var(--color-text);
     border-radius: 15px;
+    height: 45px;
 }
