--- a/styles/cards.css
+++ b/styles/cards.css
@@ -1,10 +1,11 @@
 .cardparent {
     width: 100%;
-    border-radius: 10px;    
+    border-radius: 10px;
     display: flex;
     position: relative;
     cursor: pointer;
 }
+
 .info {
     width: 50%;
     height: 100%;
@@ -14,9 +15,11 @@
     align-items: center;
     margin: 0;
 }
-.infocard{
+
+.infocard {
     overflow: hidden;
 }
+
 .charimg {
     width: 50%;
     height: 100%;
@@ -25,32 +28,38 @@
     align-items: center;
     overflow: hidden;
 }
+
 .image {
-    overflow: hidden;    
+    overflow: hidden;
     box-shadow: rgba(0, 115, 255, 0.925) 0px 20px 50px -25px;
     margin: 10px;
 }
-.image img{
+
+.image img {
     width: 100%;
     height: 100%;
     border-radius: 10px;
     overflow: hidden;
 }
+
 @media (max-width: 768px) {
     .cardparent {
         flex-direction: column;
     }
+
     .info,
     .charimg {
         width: 100%;
         height: 50%;
     }
 }
+
 .parent {
     height: 400px;
     width: 300px;
     padding: 20px;
 }
+
 .card {
     padding-top: 100px;
     transform-style: preserve-3d;
@@ -60,6 +69,7 @@
     transition: all 0.5s ease-in-out;
     border-radius: 10px;
 }
+
 .content-box {
     height: 100%;
     width: 100%;
@@ -70,18 +80,21 @@
     padding: 50px 25px 25px 25px;
     transform-style: preserve-3d;
 }
+
 .content-box .card-title {
     color: white;
     font-size: 25px;
     font-weight: 900;
     transition: all 0.5s ease-in-out;
 }
+
 .content-box .card-content {
     padding-top: 12px;
     font-size: 12px;
     color: #b9b9b9;
     transition: all 0.5s ease-in-out;
 }
+
 .content-box .dept {
     display: block;
     font-weight: 900;
@@ -91,21 +104,25 @@
     padding-top: 15px;
     transition: all 0.5s ease-in-out;
 }
+
 .img-box {
     position: absolute;
     top: 75px;
     left: 25px;
     height: 60px;
     width: 60px;
-    background-color: black;/*replace by bg image*/
+    background-color: black;
+    /*replace by bg image*/
     border-radius: 10px;
     padding: 10px;
     box-shadow: #0066ff 0px 20px 60px 0px, #00c8ff 0px 18px 36px -18px;
 }
 
 .card1 {
-    filter: hue-rotate(0deg);/*change the value to change the color*/
+    filter: hue-rotate(0deg);
+    /*change the value to change the color*/
 }
+
 .card2 {
     filter: hue-rotate(150deg);
 }
@@ -122,48 +139,56 @@
 
 
 /*animation on infobox odd*/
-.aniodd.trig{
-    animation: comeinodd 1.5s normal forwards ease-in-out; 
+.aniodd.trig {
+    animation: comeinodd 1.5s normal forwards ease-in-out;
 }
-@keyframes comeinodd { 
-  0% { 
-    transform: translate(-100%);
-  } 
-  100% { 
-    transform: translate(0%);
-  } 
+
+@keyframes comeinodd {
+    0% {
+        transform: translate(-100%);
+    }
+
+    100% {
+        transform: translate(0%);
+    }
 }
 
 
 /*animation on infobox even*/
-.anieven.trig{
-    animation: comeineven 1.5s normal forwards ease-in-out; 
+.anieven.trig {
+    animation: comeineven 1.5s normal forwards ease-in-out;
 }
-@keyframes comeineven { 
-  0% { 
-    transform: translate(100%);
-  } 
-  100% { 
-    transform: translate(0%);
-  } 
-}
-/*animation on image card*/
-.ani2.trig{
-    animation: bounce 1.5s normal forwards ease-in-out; 
-}
-@keyframes bounce { 
- 0%{
-    opacity: 0;
-    transform: translateY(0);
- }
- 40%{
-    transform: translateY(-30px);
+
+@keyframes comeineven {
+    0% {
+        transform: translate(100%);
     }
-    60%{
+
+    100% {
+        transform: translate(0%);
+    }
+}
+
+/*animation on image card*/
+.ani2.trig {
+    animation: bounce 1.5s normal forwards ease-in-out;
+}
+
+@keyframes bounce {
+    0% {
+        opacity: 0;
+        transform: translateY(0);
+    }
+
+    40% {
+        transform: translateY(-30px);
+    }
+
+    60% {
         transform: translateY(-10px);
     }
 
-    100% { 
+    100% {
         opacity: 1;
         transform: translateY(0);
     }
